--- a/_i18n/zh-cn.yml
+++ b/_i18n/zh-cn.yml
@@ -239,7 +239,7 @@ team:
     title: 亚洲业务
     bio: Sebastian Bausch 是曼谷的一位天使投资人，自 2011 年以来一直对加密货币充满热情。他在厦门大学学习了普通话，并拥有诺丁汉大学的研究生学位。他支持团队在该地区的运作，并协调翻译和聚会。
   lemarlukebriones:
-    name: Lemar “Luke” Briones
+    name: Lemar "Luke" Briones
     title: 菲律宾社区管理者
     bio: Lemar 毕业于菲律宾的信息技术专业，自 2017 年以来一直是加密货币的爱好者，并致力于在菲律宾各地传播对 Firo 的认识。
   aramjivanyan:
