add translated missing value for zh-cn:footer.feed (fix warnings)

--- a/_i18n/zh-cn.yml
+++ b/_i18n/zh-cn.yml
@@ -51,7 +51,7 @@ footer:
   ifsub: Check out our Telegram channel to stay up to date on Firo news.
   newsbutton: Read news
   comm: 加入讨论
-  feed: 
+  feed: 源
 
 home:
   heading: 隐私是同意
