--- a/_i18n/nl.yml
+++ b/_i18n/nl.yml
@@ -298,7 +298,8 @@ merchants:
   button3: Donatie
   button4: Freelancing
   button5: Gaming
-  button6: Gezondsheidsproducten
+  button6: Gezondheidsproducten
+
   button7: Hosting
   button8: Juridische diensten
   button9: Online Marketplaatsen
