--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -31,5 +31,5 @@ jobs:
         uses: rossjrw/pr-preview-action@v1
         with:
           source-dir: _site
-          custom-url: justanwar.github.io/firo-site
+          custom-url: firoorg.github.io/firo-site
           
