Fix missing i18n key

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -73,6 +73,7 @@ home:
   blockchain4: master nodes
   privacyin: Privacy Infrastructure
   privacyin1: With Spark Assets, Firo extends privacy beyond just transactions to the assets themselves. This feature conceals the type of asset being transferred, making it perfect for creating privacy-focused tokens that can be used in secure, anonymous applications like voting or private tokenized assets.
+  randd: Research and Development
   randd1: Firo stands out as one out of a handful of projects that contribute independent research to blockchain privacy and decentralization technologies such as Zerocoin, Sigma, Lelantus, Lelantus Spark and MTP. Our work has played a pivotal role in the space having influenced or been adopted in other projects.
   getfiro: Get Firo
   getfiro1: Buy, mine, or earn Firo, and join the privacy revolution. <br>Store your Firo in one of our feature-filled wallets, optimized for power, accessibility, and user experience.
