--- a/_i18n/nl.yml
+++ b/_i18n/nl.yml
@@ -105,6 +105,7 @@ download:
   qt: Reference-portemonnee
   downloadqtw: Download Reference voor Windows
   downloadqtm: Download Reference voor macOS
+  downloadqtmarm: Download Reference voor macOS arm64
   downloadqtflathub: Vind het op Flathub
   downloadqtl: Download Reference voor Linux
   electron: Campfire
@@ -119,6 +120,7 @@ download:
   downloadelectruml: Download Electrum voor Linux
   hasheswindows: Toon SHA256-hashes voor Windows
   hashesmac: Toon SHA256-hashes voor macOS
+  hashesmacarm: Toon SHA256-hashes voor macOS arm64
   hasheslinux: Toon SHA256-hashes voor Linux
   officialmobile: officiële mobile portemonnees
   optionmob1: Android
