--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -248,6 +248,22 @@ team:
     name: Narek Geghamyan
     title: Developer
     bio: Narek is a software engineer who graduated from a Faculty of  computer science in National University of Architecture and Construction of Armenia. His tech stack includes C++ and Linux. He has a passion a swimming and coding.
+  cypherstack:
+    name: Cypher Stack
+    title: Design Firm
+    bio: Cypher Stack is a blockchain developer, design, research, and consultation company. They are currently developing Firo with their mobile wallet and lite desktop wallet, Campfire.
+  batuhan:
+    name: Batuhan
+    title: Turkish Community Manager
+    bio: Batuhan manages the Turkish community, translating annoucements and notices
+  antibit:
+    name: Antibit
+    title: Russian Community Manager
+    bio: Antibit manages the Russian community, translating annoucements and notices
+  lilking:
+    name: Lil-King
+    title: Community Manager
+    bio: Lil-King is a dedicated privacy advocate in the crypto space with over five years of experience. Specializing in marketing and onboarding, Lil-King has played a crucial role in promoting privacy-focused projects. Passionate about financial privacy, Lil-King is committee to educating and empowering users to take control of their digital assets securely.
   
 roadmap:
   aura: Aura Private Voting (finalizing paper)
