--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -230,8 +230,8 @@ team:
     bio: An Information Technology graduate from the Philippines, Lemar has been a cryptocurrency enthusiast since 2017 and is dedicated to spreading awareness of Firo across the Philippines.
   aramjivanyan:
     name: Aram Jivanyan
-    title: Cryptographer
-    bio: Aram is the creator of Firo's Lelantus and Lelantus Spark privacy protocols which has revived interest in one-out-of-many proofs and inspired other privacy protocols such as Triptych (Monero) and Lelantus-MW (Beam). He is also the founding CEO of Skycryptor, Techstars company pioneering the development of proxy re-encryption algorithms. Before founding Skycryptor, Aram worked as senior cryptography researcher and development team lead at the American University of Armenia where the scientific group conducted cryptography research for Fortune 1000 industrial partners. Aram's main research interest included white-box cryptography, searchable encryption methods, oblivious transfer protocols and cryptographic e-voting systems.
+    title: Chief Privacy Architect
+    bio: Aram has been a key figure in developing Firo's core technology, having created both the Lelantus and Lelantus Spark protocols. These scientific innovations have significantly influenced the privacy protocol landscape within the cryptocurrency space, inspiring the creation of other privacy-focused protocols such as Triptych (Monero), Seraphis (Monero), and Lelantus-MW (Beam). He has also designed privacy preserving voting systems with minimal trust requirements such as Aura.
   aregvrtanesyan:
     name: Areg Vrtanesyan
     title: Cryptography Researcher / Developer
